<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:id="@+id/layout_home"
        android:visibility="visible"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/tv_information_about_app"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_below="@id/title_main"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="26dp"
            android:onClick="logInClicked"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_log_in" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:onClick="signUpClicked"
            android:layout_toRightOf="@id/btn_logIn"
            android:backgroundTint="@color/purple"
            android:text="@string/btn_sign_up" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="@dimen/text_margin"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/custom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_to_signup_text"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title" />



        <EditText
            android:padding="4dp"
            android:id="@+id/user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Username"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"            />
        <EditText
            android:padding="4dp"
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Password"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"            />
        <EditText
            android:id="@+id/user_address"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Address"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"            />
        <EditText
            android:id="@+id/gift_or_needs"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Need"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/user_phone"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:inputType="phone"
            android:hint="Mobile number"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"            />

        <ImageView
            android:id="@+id/user_image"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_create_new_folder_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add media"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btn_submit_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:onClick="submitSignUpClicked"
            android:backgroundTint="@color/purple"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="@dimen/text_margin"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/custom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_to_login"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title" />

        <EditText
            android:id="@+id/username_login"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/username"
            />
        <EditText
            android:id="@+id/password_login"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"            />

        <Button
            android:id="@+id/btn_submit_volunteer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:onClick="submitLoginClicked"
            android:backgroundTint="@color/purple"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="@dimen/text_margin"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/custom_border">
        <Button
            android:id="@+id/btn_as_needy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I am needy"
            android:onClick="needyClicked"
            android:backgroundTint="@color/purple"
            />

        <Button
            android:id="@+id/btn_as_sponsor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I am donator"
            android:onClick="donatorClicked"
            android:backgroundTint="@color/purple"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/code_check_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_margin="@dimen/text_margin"
        android:background="@drawable/custom_border"
        android:backgroundTint="@color/white"
        android:orientation="vertical">


        <EditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="19dp"
            android:hint="Code"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="We have send an SMS with an activation code to your phone. Type Code in "
            android:textSize="16sp"
            android:layout_below="@id/code_edit_text"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="166dp"
            android:text="60"
            android:textSize="16sp" />

        <Button
            android:id="@+id/checkCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="Go"
            android:onClick="checkCodeClicked"
            android:layout_below="@id/timer"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>